[gd_scene load_steps=2 format=2]

[ext_resource path="res://singletons/MusicManager.gd" type="Script" id=1]

[node name="MusicManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer2" type="AudioStreamPlayer" parent="."]

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CrossFadeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CrossFadeTimer" to="." method="_on_CrossFadeTimer_timeout"]
